index.html 페이지 변경

--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
     <title>WebViewTestPage</title>
 </head>
 <body>
+    
+1. 웹뷰로 투명 배경 표현이 가능한가? 그리고 게임 렌더링 위에 그대로 적용이 가능한가?
+
+
+2. 웹뷰를 투명 배경으로 띄웠을 때 게임 성능에 얼만큼 영향이 가는가?
+
+
+3. 웹뷰가 게임 렌더링 위에 4각 프레임 위로 올라올 수 있는가?
+
+
+4. 웹뷰가 전체화면으로 게임 중에 띄워질 수 있는가?
+
+
+5. 게임화면을 캡처 혹은 인게임 이미지 리소스를 웹뷰에 전달할 수 있는가?
+
+
+6. 웹뷰 화면을 게임에서 이미지로 읽어들일 수 있는가?
+
+
 </body>
 </html>
