--- a/index.html
+++ b/index.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <title>WebViewTestPage</title>
+
+    <link rel="stylesheet" href="./swiper.min.css">
+
+    <style>
+        html,
+        body {
+            position: relative;
+            height: 100%;
+        }
+
+        body {
+            background: #fff;
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+
+        .swiper-container {
+            width: 300px;
+            height: 300px;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin-left: -150px;
+            margin-top: -150px;
+        }
+
+        .swiper-slide {
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
 </head>
+</head>
+
 <body>
-    <div>
-        
+    <!-- Swiper -->
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image:url(./images/nature-1.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(./images/nature-2.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(./images/nature-3.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(./images/nature-4.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(./images/nature-5.jpg)"></div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
     </div>
 
+    <!-- Swiper JS -->
+    <script src="./swiper.min.js"></script>
+
+    <!-- Initialize Swiper -->
     <script>
+        var swiper = new Swiper('.swiper-container', {
+            effect: 'cube',
+            grabCursor: true,
+            cubeEffect: {
+                shadow: true,
+                slideShadows: true,
+                shadowOffset: 20,
+                shadowScale: 0.94,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+            },
+        });
+
         function showAlert(msg) {
             alert(msg);
         }
@@ -20,4 +84,5 @@
         }
     </script>
 </body>
+
 </html>
